dynomodb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dynamodb-ingress
spec:
  backend:
    serviceName: dynamodb-service
    servicePort: 8000
